# genai-hackathon

./: .env  .env.local  .gitignore  About_uv.md  README.md  debug_firebase.py  debug_imports.py  langflow_pipeline.py  pyproject.toml  serviceAccountKey.json  simple_test.py  test_pipeline.py  test_results_20250919_011155.json  test_results_20250919_011439.json  test_whole.py  web_api.py
campaigns/kalamkari-scarf/: metadata.json
db/: firestore_loader.py
scripts/: instagram_poster.py  post_from_db.py  telegram_poster.py  test_campaign.py
utilities/: firebase_client.py  logger.py  video_generator.py
web/about/: index.html
web/auth/: app.js  index.html  style.css
web/home/: app.js  index.html
web/products/: app.js  index.html
web/profile/: app.js  index.html
web/upload/: app.js  index.html  photos.html  photos.js  step1.js  style.css
